added years section

--- a/indexN.html
+++ b/indexN.html
@@ -196,6 +196,26 @@
       <button id="more">More results</button>
     </div>
 
+    <div class="container">
+      <h3>Select the year to see number of dengue cases</h3>
+        <div class="years">
+          <button type="button" class="btn btn-primary 2018">
+            2018
+          </button>
+          <button type="button" class="btn btn-success 2017">
+            2017
+          </button>
+          <button type="button" class="btn btn-warning 2016">
+            2016
+          </button>
+          <button type="button" class="btn btn-secondary 2015">
+            2015
+          </button>
+          <button type="button" class="btn btn-dark 2014">
+            2014
+          </button>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -214,7 +234,10 @@
     <script src="/trent-project-2-dengue/assets/jquery.js"></script>
     <script src="/trent-project-2-dengue/assets/appN.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap" async defer
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap"
+      async
+      defer
     ></script>
   </body>
 </html>
