--- a/index.html
+++ b/index.html
@@ -102,28 +102,11 @@
             pariatur eligendi aut iste possimus.
           </div>
         </div>
-        <button type="button" class="btn btn-secondary reset-btn">
+
+        <button type="button" class="btn btn-secondary reset-btn" >
           Reset
         </button>
-
-        <!-- <button
-            class="btn btn-primary"
-            type="button"
-            data-toggle="collapse"
-            data-target="#collapseExample"
-            aria-expanded="false"
-            aria-controls="collapseExample"
-          >
-            Button with data-target
-          </button>
-          <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life
-              accusamus terry richardson ad squid. Nihil anim keffiyeh
-              helvetica, craft beer labore wes anderson cred nesciunt sapiente
-              ea proident.
-            </div>
-          </div> -->
+        
       </div>
 
       <div class="btn-group">
@@ -149,12 +132,40 @@
   </div>
 
   <!-- Google Map results -->
-  <div id="right-panel">
-    <h2>Results</h2>
-    <ul id="places"></ul>
-    <button id="more">More results</button>
+  <div id="listing">
+    <table id="resultsTable">
+      <tbody id="results"></tbody>
+    </table>
+  </div>
+  
+  <div style="display: none">
+    <div id="info-content">
+      <table>
+        <tr id="iw-url-row" class="iw_table_row">
+          <td id="iw-icon" class="iw_table_icon"></td>
+          <td id="iw-url"></td>
+        </tr>
+        <tr id="iw-address-row" class="iw_table_row">
+          <td class="iw_attribute_name">Address:</td>
+          <td id="iw-address"></td>
+        </tr>
+        <tr id="iw-phone-row" class="iw_table_row">
+          <td class="iw_attribute_name">Telephone:</td>
+          <td id="iw-phone"></td>
+        </tr>
+        <tr id="iw-rating-row" class="iw_table_row">
+          <td class="iw_attribute_name">Rating:</td>
+          <td id="iw-rating"></td>
+        </tr>
+        <tr id="iw-website-row" class="iw_table_row">
+          <td class="iw_attribute_name">Website:</td>
+          <td id="iw-website"></td>
+        </tr>
+      </table>
+    </div>
   </div>
 
+  <!-- Years section -->
   <div class="container">
     <h3>Select the year to see number of dengue cases</h3>
     <div class="years">
