--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>DENGUE</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
     integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/trent-project-2-dengue/assets/styles.css" />
+  <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 
 <body>
@@ -103,10 +103,10 @@
           </div>
         </div>
 
-        <button type="button" class="btn btn-secondary reset-btn" >
+        <button type="button" class="btn btn-secondary reset-btn">
           Reset
         </button>
-        
+
       </div>
 
       <div class="btn-group">
@@ -137,7 +137,7 @@
       <tbody id="results"></tbody>
     </table>
   </div>
-  
+
   <div style="display: none">
     <div id="info-content">
       <table>
@@ -195,8 +195,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
       integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P"
       crossorigin="anonymous"></script>
-    <script src="/trent-project-2-dengue/assets/jquery.js"></script>
-    <script src="/trent-project-2-dengue/assets/app.js"></script>
+    <script src="/assets/jquery.js"></script>
+    <script src="/assets/app.js"></script>
 
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap"
