--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
               content.</p>
             <a href="#" class="card-link northeastclinics">Clinics</a>
             <a href="#" class="card-link northeasthospital">Hospitals</a>
-            <a href="#" class="card-link">Food Delivery</a>
-            <a href="#" class="card-link">Dengue Cluster</a>
+            <a href="#" class="card-link northeastmeal">Meal Delivery</a>
+            <a href="#" class="card-link northeastdengue">Dengue Cluster</a>
           </div>
         </div>
 
