added north food js file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>DENGUE</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
     integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/trent-project-2-dengue/assets/styles.css" />
+  <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 
 <body>
@@ -79,12 +79,15 @@
         <div class="card" style="width: 70%;">
           <div class="card-body">
             <h5 class="card-title">North East</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam neque illum natus amet delectus asperiores nesciunt ipsa provident quo. Ab commodi illum minima voluptates dicta eos, cum incidunt laborum?
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam neque illum natus amet delectus
+              asperiores nesciunt ipsa provident quo. Ab commodi illum minima voluptates dicta eos, cum incidunt
+              laborum?
               content.</p>
-            <a href="#" class="card-link northeastclinics">Clinics</a>
-            <a href="#" class="card-link northeasthospital">Hospitals</a>
-            <a href="#" class="card-link northeastmeal">Meal Delivery</a>
-            <a href="#" class="card-link northeastdengue">Dengue Cluster</a>
+            <a href="#" class="card-link northeast-clinics">Clinics</a>
+            <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
+            <a href="#" class="card-link northeast-meals">Meal Delivery</a>
+            <a href="#" class="card-link northeast-dengue">Dengue Cluster</a>
           </div>
         </div>
 
@@ -154,7 +157,7 @@
     </div>
 
     <!--load jquery first, else console mention $ not define-->
-    <script src="/trent-project-2-dengue/assets/jquery.js"></script>
+    <script src="/assets/jquery.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"></script>
@@ -164,14 +167,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
       integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P"
       crossorigin="anonymous"></script>
-    
+
     <!--Google Map API-->
-        <script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap"
       async defer></script>
 
-       <!--Own js file-->
-    <script src="/trent-project-2-dengue/assets/app.js"></script>
+    <!--Own js file-->
+    <script src="/assets/app.js"></script>
+    <script src="/assets/northfood.js"></script>
 
 
 </body>
