added north food places and groups all in folder

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
               asperiores nesciunt ipsa provident quo. Ab commodi illum minima voluptates dicta eos, cum incidunt
               laborum?
               content.</p>
+              <a href="#" class="card-link northeast-dengue">Dengue Cluster</a>
             <a href="#" class="card-link northeast-clinics">Clinics</a>
             <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
             <a href="#" class="card-link northeast-meals">Meal Delivery</a>
-            <a href="#" class="card-link northeast-dengue">Dengue Cluster</a>
           </div>
         </div>
 
@@ -175,7 +175,10 @@
 
     <!--Own js file-->
     <script src="/assets/app.js"></script>
-    <script src="/assets/northfood.js"></script>
+    <script src="/assets/north/northdengue.js"></script>
+    <script src="/assets/north/northclinic.js"></script>
+    <script src="/assets/north/northpharmacy.js"></script>
+    <script src="/assets/north/northfood.js"></script>
 
 
 </body>
