cleared unwanted nea files

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 
     <!--Own js file-->
     <script src="/assets/app.js"></script>
+    <script src="/assets/Atest.js"></script>
     <script src="/assets/north/northdengue.js"></script>
     <script src="/assets/north/northclinic.js"></script>
     <script src="/assets/north/northpharmacy.js"></script>
