--- a/index.html
+++ b/index.html
@@ -1,114 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>DENGUE</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
+      integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>DENGUE</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
-    integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/assets/styles.css" />
-</head>
+  <body>
+    <!-- Start of Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#"
+            >Home <span class="sr-only">(current)</span></a
+          >
+          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="nav-item nav-link" href="#">Pricing</a>
+        </div>
+      </div>
+    </nav>
+    <!-- End of Navbar -->
 
-<body>
-  <!-- Start of Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
+    <!-- Start of Dengue Description -->
+    <div class="container">
+      <div class="dengue-description">
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          modi consequuntur! Aliquid corporis eaque totam ab architecto. Veniam,
+          quae enim velit cumque expedita inventore totam aliquam magnam
+          laudantium, accusantium quam! Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. Delectus assumenda laudantium deleniti atque fugiat
+          magnam, corrupti, architecto ipsam similique rerum omnis veritatis
+          exercitationem voluptates, est nobis necessitatibus deserunt odit
+          voluptatem.
+        </article>
       </div>
     </div>
-  </nav>
-  <!-- End of Navbar -->
+    <!-- End of Dengue Description -->
 
-  <!-- Start of Dengue Description -->
-  <div class="container">
-    <div class="dengue-description">
-      <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
-        modi consequuntur! Aliquid corporis eaque totam ab architecto. Veniam,
-        quae enim velit cumque expedita inventore totam aliquam magnam
-        laudantium, accusantium quam! Lorem ipsum dolor sit amet, consectetur
-        adipisicing elit. Delectus assumenda laudantium deleniti atque fugiat
-        magnam, corrupti, architecto ipsam similique rerum omnis veritatis
-        exercitationem voluptates, est nobis necessitatibus deserunt odit
-        voluptatem.
-      </article>
-    </div>
-  </div>
-  <!-- End of Dengue Description -->
+    <!-- Start of Select Zone -->
+    <div class="container">
+      <div class="select-zone">
+        <h3>Please select ZONES to see the dengue clusters</h3>
+        <div class="zonebtns">
+          <button type="button" class="btn btn-primary north-east">
+            North East
+          </button>
 
-  <!-- Start of Select Zone -->
-  <div class="container">
-    <div class="select-zone">
-      <h3>Please select ZONES to see the dengue clusters</h3>
-      <div class="zonebtns">
-        <button type="button" class="btn btn-primary north-east">
-          North East
-        </button>
+          <button type="button" class="btn btn-success south-east">
+            South East
+          </button>
 
+          <button type="button" class="btn btn-warning central">
+            Central
+          </button>
 
-        <button type="button" class="btn btn-success south-east">
-          South East
-        </button>
+          <button type="button" class="btn btn-info south-west">
+            South West
+          </button>
 
+          <button type="button" class="btn btn-danger reset-btn">
+            Reset
+          </button>
 
-        <button type="button" class="btn btn-warning central">
-          Central
-        </button>
-
-
-        <button type="button" class="btn btn-info south-west">
-          South West
-        </button>
-
-
-        <button type="button" class="btn btn-danger reset-btn">
-          Reset
-        </button>
-
-        <!-- Dengue Card -->
-        <div class="card" style="width: 70%;">
-          <div class="card-body">
-            <h5 class="card-title">North East</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam neque illum natus amet delectus
-              asperiores nesciunt ipsa provident quo. Ab commodi illum minima voluptates dicta eos, cum incidunt
-              laborum?
-              content.</p>
-              <a href="#" class="card-link northeast-dengue">Dengue Cluster</a>
-            <a href="#" class="card-link northeast-clinics">Clinics</a>
-            <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
-            <a href="#" class="card-link northeast-meals">Meal Delivery</a>
+          <!-- Dengue Card -->
+          <div class="card" style="width: 70%;">
+            <div class="card-body">
+              <h5 class="card-title">North East</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's Lorem, ipsum dolor sit amet consectetur
+                adipisicing elit. Dolorem magnam neque illum natus amet delectus
+                asperiores nesciunt ipsa provident quo. Ab commodi illum minima
+                voluptates dicta eos, cum incidunt laborum? content.
+              </p>
+              <a href="#" class="card-link northeast-clinics">Clinics</a>
+              <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
+              <a href="#" class="card-link northeast-meals">Meal Delivery</a>
+            </div>
           </div>
         </div>
-
       </div>
     </div>
-  </div>
-  <!-- End of Select Zone -->
+    <!-- End of Select Zone -->
 
-  <!-- Google Map -->
-  <div class="container">
-    <div id="map"></div>
-  </div>
+    <!-- Google Map -->
+    <div class="container">
+      <div id="map"></div>
+    </div>
 
-  <!-- Google Map results -->
-  <!-- <div id="listing">
+    <!-- Google Map results -->
+    <!-- <div id="listing">
     <table id="resultsTable">
       <tbody id="results"></tbody>
     </table>
   </div> -->
 
-  <!-- <div style="display: none">
+    <!-- <div style="display: none">
     <div id="info-content">
       <table>
         <tr id="iw-url-row" class="iw_table_row">
@@ -135,53 +143,37 @@
     </div>
   </div> -->
 
-  <!-- Years section -->
-  <div class="container">
-    <h3>Select the year to see number of dengue cases</h3>
-    <div class="years">
-      <button type="button" class="btn btn-primary 2018">
-        2018
-      </button>
-      <button type="button" class="btn btn-success 2017">
-        2017
-      </button>
-      <button type="button" class="btn btn-warning 2016">
-        2016
-      </button>
-      <button type="button" class="btn btn-secondary 2015">
-        2015
-      </button>
-      <button type="button" class="btn btn-dark 2014">
-        2014
-      </button>
-    </div>
-
     <!--load jquery first, else console mention $ not define-->
     <script src="/assets/jquery.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
       integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
 
     <!--Google Map API-->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQOzXrUwtwRVkzSyWzeRdxfpiPe7kBliU&libraries=places&callback=initMap"
-      async defer></script>
+      async
+      defer
+    ></script>
 
     <!--Own js file-->
     <script src="/assets/app.js"></script>
     <script src="/assets/Atest.js"></script>
-    <script src="/assets/north/northdengue.js"></script>
+    <script src="/assets/dengue-clusters.js"></script>
     <script src="/assets/north/northclinic.js"></script>
     <script src="/assets/north/northpharmacy.js"></script>
     <script src="/assets/north/northfood.js"></script>
-
-
-</body>
-
+  </body>
 </html>
