--- a/testpolygon.html
+++ b/testpolygon.html
@@ -20,18 +20,19 @@
     </style>
   </head>
   <body>
+    <h1 id="click">CLICK</h1>
     <div id="map"></div>
     <script src="/assets/jquery.js"></script>
     <script>
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 12,
+          zoom: 11,
           center: { lat: 1.35027, lng: 103.851959 }
         });
 
         data = map.data.loadGeoJson(
-          "/nea_files/zika-cluster/zika-cluster-geojson.geojson"
+          "/nea_files/dengue-clusters-geojson.geojson"
         );
 
         map.data.addGeoJson(data);
@@ -69,6 +70,26 @@
           fillColor: "green",
           strokeWeight: 1
         });
+      }
+
+      $("#click").on("click", function(x) {
+        testtest();
+      });
+
+      function testtest() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 12,
+          center: { lat: 1.4326, lng: 103.8267 }
+        });
+        data = map.data.loadGeoJson(
+          "/nea_files/dengue-cases-central-geojson.geojson"
+        );
+        map.data.addGeoJson(data);
+        map.data.setStyle({
+          fillColor: "red",
+          strokeWeight: 1
+        });
+        console.log("test");
       }
     </script>
     <script
