added information for North East card

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
     <!-- Start of Select Zone -->
     <div class="container">
       <div class="select-zone">
-        <h3>Please select ZONES to see the dengue clusters</h3>
+        <h3>
+          Select to see the dengue clusters in the area
+        </h3>
         <div class="zonebtns">
           <button type="button" class="btn btn-primary north-east">
             North East
@@ -80,7 +82,7 @@
           </button>
 
           <button type="button" class="btn btn-danger reset-btn">
-            Reset
+            Singapore
           </button>
 
           <!-- Dengue Card -->
@@ -88,15 +90,27 @@
             <div class="card-body">
               <h5 class="card-title">North East</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Dolorem magnam neque illum natus amet delectus
-                asperiores nesciunt ipsa provident quo. Ab commodi illum minima
-                voluptates dicta eos, cum incidunt laborum? content.
+                The North-East Region of Singapore is one of the five regions in
+                the city-state. The region is the most densely populated and has
+                the third highest population among the five, with Hougang being
+                its most populous town as of 2018 and Seletar as the regional
+                centre. Comprising 13,810 hectares, it includes seven planning
+                areas and is largely a residential region with 217,120 homes. As
+                its name implies, it is located in the north-eastern part of
+                Singapore.
+                <a
+                  href="https://www.nea.gov.sg/dengue-zika/dengue/dengue-cases"
+                  target="_blank"
+                  >Read More for the latest Dengue Information</a
+                >
               </p>
+
               <a href="#" class="card-link northeast-clinics">Clinics</a>
               <a href="#" class="card-link northeast-pharmacies">Pharmacies</a>
               <a href="#" class="card-link northeast-meals">Meal Delivery</a>
+              <a href="#" class="card-link northeast-supermarkets"
+                >Supermarkets</a
+              >
             </div>
           </div>
         </div>
