added mozzie wipeout image

--- a/index.html
+++ b/index.html
@@ -31,17 +31,22 @@
   </nav>
   <!-- End of Navbar -->
 
+  <!-- Mozzie Wipeout Image -->
+  <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="" class="mozzie-wipeout">
+
   <!-- Start of Dengue Description -->
   <div class="container">
-    <div class="dengue-description">
-      <article>
-        Dengue is a viral infection caused by four types of viruses belonging to the
-        Flaviviridae family. The viruses are transmitted through the bite of infected Aedes female mosquitoes that feed
-        both indoors and outdoors during the daytime (from dawn to dusk). Singapore has reported recent Dengue cases.
-        Risk is present year-round with peak transmission during the rainy season, from September to February.
-
-
-      </article>
+    <div class="card dengue-description" style="width: 70%;">
+      <div class="card-body">
+        <h5 class="card-title">About Dengue</h5>
+        <p class="card-text">
+          Dengue is a viral infection caused by four types of viruses belonging to the
+          Flaviviridae family. The viruses are transmitted through the bite of infected Aedes female mosquitoes that
+          feed
+          both indoors and outdoors during the daytime (from dawn to dusk). Singapore has reported recent Dengue cases.
+          Risk is present year-round with peak transmission during the rainy season, from September to February.
+        </p>
+      </div>
     </div>
   </div>
   <!-- End of Dengue Description -->
@@ -73,8 +78,8 @@
           Singapore
         </button>
 
-        <!-- Dengue Card -->
-        <div class="card" style="width: 70%;">
+        <!-- North East Dengue Card -->
+        <div class="card northeastcard" style="width: 70%;">
           <div class="card-body">
             <h5 class="card-title">North East</h5>
             <p class="card-text">
@@ -97,6 +102,34 @@
             <a href="#" class="card-link northeast-supermarkets">Supermarkets</a>
           </div>
         </div>
+        <!--  -->
+        <div class="card d-none">
+          <div class="southeastcard" style="width: 70%;">
+            <div class="card-body">
+              <h5 class="card-title">South East</h5>
+              <p class="card-text">
+                The South-East Region of Singapore is one of the five regions in
+                the city-state. The region is the most densely populated and has
+                the third highest population among the five, with Hougang being
+                its most populous town as of 2018 and Seletar as the regional
+                centre. Comprising 13,810 hectares, it includes seven planning
+                areas and is largely a residential region with 217,120 homes. As
+                its name implies, it is located in the north-eastern part of
+                Singapore.
+                <a href="https://www.nea.gov.sg/dengue-zika/dengue/dengue-cases" target="_blank">Read More </a>for the
+                latest
+                Dengue Information
+              </p>
+
+              <a href="#" class="card-link southeast-clinics">Clinics</a>
+              <a href="#" class="card-link southeast-pharmacies">Pharmacies</a>
+              <a href="#" class="card-link southeast-meals">Meal Delivery</a>
+              <a href="#" class="card-link southeast-supermarkets">Supermarkets</a>
+            </div>
+          </div>
+        </div>
+
+        <!--  -->
       </div>
     </div>
   </div>
