added 2 cards for dengue

--- a/index.html
+++ b/index.html
@@ -32,23 +32,46 @@
   <!-- End of Navbar -->
 
   <!-- Mozzie Wipeout Image -->
-  <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="" class="mozzie-wipeout">
-
+  <div class="stagnant-water d-md-none">
+    <img src="/assets/images/stagnant-water.jpg" alt="">
+  </div>
+  <div class="mozzie-wipeout d-none d-md-block">
+    <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="">
+  </div>
   <!-- Start of Dengue Description -->
   <div class="container">
-    <div class="card dengue-description" style="width: 70%;">
-      <div class="card-body">
-        <h5 class="card-title">About Dengue</h5>
-        <p class="card-text">
-          Dengue is a viral infection caused by four types of viruses belonging to the
-          Flaviviridae family. The viruses are transmitted through the bite of infected Aedes female mosquitoes that
-          feed
-          both indoors and outdoors during the daytime (from dawn to dusk). Singapore has reported recent Dengue cases.
-          Risk is present year-round with peak transmission during the rainy season, from September to February.
-        </p>
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <div class="card dengue-description" style="width: 100%;">
+          <div class="card-body">
+            <h4 class="card-title">About Dengue</h4>
+            <p class="card-text">
+              Dengue is a viral infection caused by four types of viruses transmitted through the bite of infected Aedes
+              female mosquitoes that feed both indoors and outdoors. Singapore has reported recent Dengue cases. Risk is
+              present year-round with peak transmission during the rainy season, from September to February.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <div class="card dengue-cases" style="width: 100%;">
+          <div class="card-body">
+            <h4 class="card-title">Dengue cases</h4>
+            <p class="card-text">
+              <img src="/assets/images/mosquito1.png" alt="" class="mosq-icon">
+              <div class="number-cases">
+                <span class="reported-cases">29</span><br>
+                <span>cases notified</span><br>
+                <span>30 Nov 2019 at</span><br>
+                <span>3pm</span>
+              </div>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
   <!-- End of Dengue Description -->
 
   <!-- Start of Select Zone -->
