--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="container">
     <div class="select-zone" id="select-zone">
       <h3>
-        Click to view the dengue clusters
+        Click an area to view it's surrounding dengue clusters
       </h3>
       <div class="zonebtns">
         <div class="row">
